--- a/style/style.scss
+++ b/style/style.scss
@@ -1,110 +1,121 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Monda&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-@mixin responsive {
-    @media screen and (max-width:768px) {
-        @content;
-    }
-
-}
-
 body {
-
+  width: 100%;
+  height: 100vh;
+  font-family: "Monda", sans-serif;
+  section {
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    .landing {
+      margin: auto;
+      width: 100%;
+      height: 90%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      background-color: rgb(255, 255, 255);
 
-    background-color: rgb(225, 239, 255);
-
-    section {
+      .primary {
         width: 100%;
-        height: 90%;
+        height: 100%;
+        position: relative;
+
+        .greeting {
+          width: 60%;
+          position: absolute;
+
+          top: 50%;
+          left: 60%;
+          background-color: rgb(255, 255, 255);
+          transform: translate(-50%, -50%);
+          &::after {
+            width: 100%;
+            height: 100%;
+            content: "Hello";
+            position: absolute;
+            font-size: 250px;
+            color: rgb(255, 255, 255);
+            text-shadow: 5px 5px 25px #c4c4c4, -5px -5px 25px #ffffff;
+            z-index: -2;
+            top: -300px;
+          }
+          h1 {
+            font-size: 60px;
+          }
+          h2 {
+            font-size: 40px;
+            .name {
+              color: rgb(38, 42, 255);
+            }
+          }
+        }
+      }
+      .secondary {
+        margin-right: auto;
+        width: 70%;
+        z-index: 2;
+        img {
+          width: 400px;
+        }
+      }
+    }
+  }
+  main {
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    .about {
+      height: 60%;
+      width: 100%;
+      border-radius: 35px;
+      background: #ffffff;
+      box-shadow: 5px 5px 25px #c4c4c4, -5px -5px 25px #ffffff;
+      padding: 20px 100px;
+      h1 {
+        text-align: center;
+        font-size: 50px;
+        margin-bottom: 100px;
+      }
+      p {
+        justify-self: center;
+        font-size: 20px;
+      }
+    }
+    .skills {
+      height: 70%;
+      h1 {
+        text-align: center;
+        font-size: 50px;
+        margin-bottom: 100px;
+      }
+      .skill-items {
+        width: 100%;
+        height: 70%;
         display: flex;
         justify-content: space-around;
-        align-items: center;
-        padding: 20px 100px;
-
-        .primary {
-            height: 30%;
-            display: flex;
-            justify-content: space-around;
-            flex-direction: column;
-
-            @include responsive() {
-                display: none;
-            }
-
-            h1 {
-                font-family: 'Ubuntu', sans-serif;
-
-                font-size: 35px;
-                color: green;
-
-
-
-                span {
-                    color: #ff4242;
-                }
-            }
-
-            .filename {
-                color: black;
-            }
-
-            .child {
-                transform: translateX(50px);
-            }
-
-
-
-
+        align-items: top;
+        h2 {
+          text-align: center;
+          font-size: 30px;
+          margin-bottom: 30px;
         }
-
-        .primary-mobile {
-            display: none;
-
-            @include responsive() {
-                display: flex;
-                justify-content: space-around;
-                align-items: left;
-                height: 30%;
-                flex-direction: column;
-                font-family: 'Ubuntu', sans-serif;
-
-
-                h2 {
-                    font-size: 25px;
-
-                    .key {
-                        color: #ff4242;
-                    }
-
-                    .value {
-                        color: green;
-                    }
-                }
-
-            }
+        .items {
+          display: grid;
+          grid-template-columns: 100px 100px;
+          grid-gap: 20px;
+          p {
+            text-align: center;
+            border: 2px solid black;
+            border-radius: 10px;
+            padding: 10px 7px;
+          }
         }
-
-        .secondary {
-            @include responsive() {
-                display: none;
-            }
-
-            height: 50%;
-
-            img {
-                padding: 0;
-                width: 700px;
-
-            }
-        }
-
-
+      }
     }
+  }
 }
