--- a/style/style.css
+++ b/style/style.css
@@ -38,6 +38,12 @@ body section .landing .primary {
   position: relative;
 }
 
+@media screen and (max-width: 426px) {
+  body section .landing .primary {
+    position: unset;
+  }
+}
+
 body section .landing .primary .greeting {
   width: 60%;
   position: absolute;
@@ -48,12 +54,32 @@ body section .landing .primary .greeting {
           transform: translate(-50%, -50%);
 }
 
+@media screen and (max-width: 426px) {
+  body section .landing .primary .greeting {
+    left: 50%;
+  }
+}
+
 body section .landing .primary .greeting h1 {
   font-size: 60px;
 }
 
+@media screen and (max-width: 426px) {
+  body section .landing .primary .greeting h1 {
+    font-size: 40px;
+    text-align: center;
+  }
+}
+
 body section .landing .primary .greeting h2 {
   font-size: 40px;
+}
+
+@media screen and (max-width: 426px) {
+  body section .landing .primary .greeting h2 {
+    font-size: 25px;
+    text-align: center;
+  }
 }
 
 body section .landing .primary .greeting h2 .name {
@@ -64,6 +90,12 @@ body section .landing .secondary {
   margin-right: auto;
   width: 70%;
   z-index: 2;
+}
+
+@media screen and (max-width: 426px) {
+  body section .landing .secondary {
+    display: none;
+  }
 }
 
 body section .landing .secondary img {
@@ -77,6 +109,12 @@ body main {
   position: relative;
 }
 
+@media screen and (max-width: 426px) {
+  body main {
+    width: 93%;
+  }
+}
+
 body main .about {
   height: 60%;
   width: 100%;
@@ -84,29 +122,43 @@ body main .about {
   -webkit-box-shadow: 5px 5px 25px #c4c4c4, -5px -5px 25px #ffffff;
           box-shadow: 5px 5px 25px #c4c4c4, -5px -5px 25px #ffffff;
   padding: 20px 100px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
 }
 
-body main .about::before {
-  content: "";
-  text-transform: uppercase;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  z-index: -1;
+@media screen and (max-width: 426px) {
+  body main .about {
+    padding: 10px 30px;
+    margin-bottom: 30px;
+  }
 }
 
 body main .about h1 {
-  text-align: center;
+  text-align: left;
   font-size: 50px;
   margin-bottom: 100px;
+}
+
+@media screen and (max-width: 426px) {
+  body main .about h1 {
+    font-size: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
 }
 
 body main .about p {
   -ms-grid-column-align: center;
       justify-self: center;
   font-size: 20px;
+}
+
+@media screen and (max-width: 426px) {
+  body main .about p {
+    font-size: 18px;
+    text-align: center;
+  }
 }
 
 body main .skills {
@@ -117,6 +169,13 @@ body main .skills h1 {
   text-align: center;
   font-size: 50px;
   margin-bottom: 100px;
+}
+
+@media screen and (max-width: 426px) {
+  body main .skills h1 {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
 }
 
 body main .skills .skill-items {
@@ -132,18 +191,40 @@ body main .skills .skill-items {
           align-items: top;
 }
 
+@media screen and (max-width: 426px) {
+  body main .skills .skill-items {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 body main .skills .skill-items h2 {
   text-align: center;
   font-size: 30px;
   margin-bottom: 30px;
 }
 
+@media screen and (max-width: 426px) {
+  body main .skills .skill-items h2 {
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+}
+
 body main .skills .skill-items .items {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 100px 100px;
-      grid-template-columns: 100px 100px;
+  -ms-grid-columns: (minmax(100px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-gap: 20px;
+}
+
+@media screen and (max-width: 426px) {
+  body main .skills .skill-items .items {
+    grid-gap: 10px;
+  }
 }
 
 body main .skills .skill-items .items p {
