--- a/style/style.scss
+++ b/style/style.scss
@@ -4,10 +4,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+@mixin mobile {
+  @media screen and (max-width: 426px) {
+    @content;
+  }
+}
 body {
   width: 100%;
   height: 100vh;
   font-family: "Monda", sans-serif;
+
   section {
     width: 100%;
     height: 100%;
@@ -24,6 +30,9 @@ body {
         width: 100%;
         height: 100%;
         position: relative;
+        @include mobile() {
+          position: unset;
+        }
 
         .greeting {
           width: 60%;
@@ -33,12 +42,23 @@ body {
           left: 60%;
           background-color: rgb(255, 255, 255);
           transform: translate(-50%, -50%);
+          @include mobile() {
+            left: 50%;
+          }
 
           h1 {
             font-size: 60px;
+            @include mobile() {
+              font-size: 40px;
+              text-align: center;
+            }
           }
           h2 {
             font-size: 40px;
+            @include mobile() {
+              font-size: 25px;
+              text-align: center;
+            }
             .name {
               color: rgb(38, 42, 255);
             }
@@ -49,6 +69,9 @@ body {
         margin-right: auto;
         width: 70%;
         z-index: 2;
+        @include mobile() {
+          display: none;
+        }
         img {
           width: 400px;
         }
@@ -60,6 +83,9 @@ body {
     height: 100%;
     margin: auto;
     position: relative;
+    @include mobile() {
+      width: 93%;
+    }
     .about {
       height: 60%;
       width: 100%;
@@ -67,26 +93,31 @@ body {
 
       box-shadow: 5px 5px 25px #c4c4c4, -5px -5px 25px #ffffff;
       padding: 20px 100px;
-      &::before {
-        content: "";
-        text-transform: uppercase;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-
-        left: 0;
-        top: 0;
-
-        z-index: -1;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 40px;
+      @include mobile() {
+        padding: 10px 30px;
+        margin-bottom: 30px;
       }
+
       h1 {
-        text-align: center;
+        text-align: left;
         font-size: 50px;
         margin-bottom: 100px;
+        @include mobile() {
+          font-size: 30px;
+          margin-bottom: 30px;
+          text-align: center;
+        }
       }
       p {
         justify-self: center;
         font-size: 20px;
+        @include mobile() {
+          font-size: 18px;
+          text-align: center;
+        }
       }
     }
     .skills {
@@ -95,6 +126,10 @@ body {
         text-align: center;
         font-size: 50px;
         margin-bottom: 100px;
+        @include mobile() {
+          font-size: 30px;
+          margin-bottom: 30px;
+        }
       }
       .skill-items {
         width: 100%;
@@ -102,15 +137,25 @@ body {
         display: flex;
         justify-content: space-around;
         align-items: top;
+        @include mobile() {
+          flex-direction: column;
+        }
         h2 {
           text-align: center;
           font-size: 30px;
           margin-bottom: 30px;
+          @include mobile() {
+            font-size: 20px;
+            margin-bottom: 16px;
+          }
         }
         .items {
           display: grid;
-          grid-template-columns: 100px 100px;
+          grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
           grid-gap: 20px;
+          @include mobile() {
+            grid-gap: 10px;
+          }
           p {
             text-align: center;
             border: 2px solid black;
