--- a/style/style.scss
+++ b/style/style.scss
@@ -157,9 +157,9 @@ body {
             grid-gap: 10px;
           }
           p {
-            text-align: center;
-            border: 2px solid black;
-            border-radius: 10px;
+            text-align: left;
+            border-left: 6px solid rgb(64, 67, 255);
+            border-radius: 6px;
             padding: 10px 7px;
             span {
               color: rgb(0, 89, 255);
