--- a/style.css
+++ b/style.css
@@ -124,16 +124,9 @@ body main section .landing {
 
 @media screen and (max-width: 780px) {
   body main section .landing {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     padding: 0 5%;
     margin-bottom: 30px;
     height: 500px;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
   }
 }
 
@@ -153,13 +146,15 @@ body main section .landing .text {
 
 body main section .landing .text h1 {
   margin-bottom: 50px;
-  font-size: 4em;
+  line-height: 5rem;
+  font-size: 7rem;
   color: white;
   letter-spacing: 5px;
 }
 
 @media screen and (max-width: 780px) {
   body main section .landing .text h1 {
+    line-height: 2rem;
     font-size: 2em;
     margin-bottom: 20px;
   }
@@ -168,42 +163,13 @@ body main section .landing .text h1 {
 body main section .landing .text p {
   font-size: 1.3em;
   color: white;
-  font-weight: 400;
+  letter-spacing: 1px;
+  font-weight: 500;
 }
 
-body main section .landing .image {
-  -webkit-clip-path: polygon(20% 0, 100% 0, 100% 100%, 0% 100%);
-          clip-path: polygon(20% 0, 100% 0, 100% 100%, 0% 100%);
-  position: absolute;
-  right: 10%;
-  width: 60%;
-  height: 600px;
-  background-color: #f2b705;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-@media screen and (max-width: 780px) {
-  body main section .landing .image {
-    position: relative;
-    -webkit-clip-path: none;
-            clip-path: none;
-    width: 100%;
-    height: 70%;
-    right: 0;
-    margin-top: 30px;
-  }
-}
-
-body main section .landing .image img {
-  width: 70%;
+body main section .landing .text p span {
+  font-weight: 700;
+  color: #f2b705;
 }
 
 body main section .about {
@@ -258,7 +224,13 @@ body main section .about p {
   color: #141259;
   font-size: 1.2em;
   padding-top: 40px;
-  line-height: 30px;
+  line-height: 2rem;
+}
+
+body main section .about p span {
+  letter-spacing: 1px;
+  font-weight: 900;
+  color: #2703a6;
 }
 
 @media screen and (max-width: 780px) {
@@ -306,6 +278,25 @@ body main section .contact p a {
 @media screen and (max-width: 780px) {
   body main section .contact p {
     font-size: 1em;
+  }
+}
+
+body main section .contact .opt-container .options {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+body main section .contact .opt-container .options p {
+  font-size: 1rem;
+}
+
+@media screen and (max-width: 780px) {
+  body main section .contact .opt-container {
+    width: 100%;
   }
 }
 
